--- a/Rakuten.Test/Rakuten.Test.Web/Site.Master
+++ b/Rakuten.Test/Rakuten.Test.Web/Site.Master
@@ -54,6 +54,7 @@
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/User/Index">Listar Usuários</a></li>
                         <li><a runat="server" href="~/User/Insert">Inserir Usuário</a></li>
+                        <li><a runat="server" href="~/User/Insert">Listar Pedidos</a></li>
                     </ul>
                 </div>
             </div>
